--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nuxt",
-    "test": "mocha"
+    "test": "ava"
   },
+  "type": "module",
   "keywords": [
     "podcastless"
   ],
@@ -17,5 +18,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "nuxt": "^2.12.0",
     "nuxt-fontawesome": "^0.4.0"
+  },
+  "devDependencies": {
+    "ava": "^3.5.0",
+    "jsdom": "^16.2.1"
   }
 }
