--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,20 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/node_modules/.bin/nuxt"
+            "program": "${workspaceFolder}/node_modules/.bin/nuxt",
+            "cwd": "${workspaceFolder}",
+            "args": [
+              "-c",
+              "${workspaceFolder}/nuxt.config.cjs"
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+          "type": "chrome",
+          "request": "launch",
+          "name": "Launch Chrome",
+          "url": "http://localhost:3000",
+          "webRoot": "${workspaceFolder}"
         },
         {
           "type": "node",
@@ -30,5 +43,14 @@
             "<node_internals>/**"
           ]
         }
+    ],
+    "compounds": [
+      {
+        "name": "Launch Website",
+        "configurations": [
+          "Launch Server",
+          "Launch Chrome"
+        ]
+      }
     ]
 }
