--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "nuxt",
     "test": "ava"
   },
-  "type": "module",
   "keywords": [
     "podcastless"
   ],
@@ -16,6 +15,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "browserlist": "^1.0.1",
     "nuxt": "^2.12.0",
     "nuxt-fontawesome": "^0.4.0"
   },
