--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm start -- generate -c ${{env.working-directory}}/nuxt.config.cjs
+      - run: npm start -- generate -c $(pwd)/nuxt.config.cjs
         env:
           CI: true
       - run: cp CNAME dist/CNAME
