--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,56 +1,54 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [{
+      "type": "node",
+      "request": "launch",
+      "name": "Unit Tests",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ava",
+      "runtimeArgs": [
+        "debug",
+        "--break",
+        "--serial"
+      ],
+      "port": 9229,
+      "outputCapture": "std",
+      "internalConsoleOptions": "openOnSessionStart",
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Server",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/node_modules/.bin/nuxt",
+      "cwd": "${workspaceFolder}",
+      "args": [
+        "dev",
+        "-c",
+        "${workspaceFolder}/nuxt.config.cjs"
+      ],
+      "console": "integratedTerminal"
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    }
+  ],
+  "compounds": [{
+    "name": "Launch Website",
     "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Server",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/node_modules/.bin/nuxt",
-            "cwd": "${workspaceFolder}",
-            "args": [
-              "-c",
-              "${workspaceFolder}/nuxt.config.cjs"
-            ],
-            "console": "integratedTerminal"
-        },
-        {
-          "type": "chrome",
-          "request": "launch",
-          "name": "Launch Chrome",
-          "url": "http://localhost:3000",
-          "webRoot": "${workspaceFolder}"
-        },
-        {
-          "type": "node",
-          "request": "launch",
-          "name": "Unit Tests",
-          "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ava",
-          "runtimeArgs": [
-            "debug",
-            "--break",
-            "--serial"
-          ],
-          "port": 9229,
-          "outputCapture": "std",
-          "internalConsoleOptions": "openOnSessionStart",
-          "skipFiles": [
-            "<node_internals>/**"
-          ]
-        }
-    ],
-    "compounds": [
-      {
-        "name": "Launch Website",
-        "configurations": [
-          "Launch Server",
-          "Launch Chrome"
-        ]
-      }
+      "Launch Server",
+      "Launch Chrome"
     ]
+  }]
 }
