--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@nuxtjs/axios": "^5.9.5",
     "browserlist": "^1.0.1",
     "nuxt": "^2.12.0",
     "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "ava": "^3.5.0",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "jsdom": "^16.2.1"
   }
 }
